Update CMake to use modern CMake and ease integration with other projects.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,46 @@
-include_directories("${PROJECT_SOURCE_DIR}/src")
-include_directories("${PROJECT_BINARY_DIR}")
 include(GenerateExportHeader)
-add_library(edit_static STATIC editline.c fn_complete.c history.c)
-add_library(edit SHARED editline.c fn_complete.c history.c libedit.def)
+
+set (WINEDITLINE_PRIVATE_SOURCES
+  editline.c
+  fn_complete.c
+  history.c
+  editline/wineditline.h
+  editline/readline.h
+)
+
+add_library(edit_static STATIC)
+add_library(WinEditLine::edit_static ALIAS edit_static)
+
+set_target_properties(edit_static PROPERTIES
+  PUBLIC_HEADER editline/readline.h)
+
+target_sources(edit_static 
+  PRIVATE 
+    ${WINEDITLINE_PRIVATE_SOURCES}
+  PUBLIC
+    ${WINEDITLINE_PUBLIC_SOURCES}
+  )
+
+add_library(edit SHARED)
+add_library(WinEditLine::edit ALIAS edit)
+target_sources(edit 
+  PRIVATE 
+    ${WINEDITLINE_PRIVATE_SOURCES}
+    libedit.def
+  PUBLIC
+    ${WINEDITLINE_PUBLIC_SOURCES}
+  )
+
+target_include_directories(edit PUBLIC 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
+)
+
+target_include_directories(edit_static PUBLIC 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
+)
+
 set_target_properties(edit PROPERTIES PREFIX "")
 GENERATE_EXPORT_HEADER(edit
   BASE_NAME edit
@@ -10,19 +48,25 @@ GENERATE_EXPORT_HEADER(edit
   EXPORT_FILE_NAME edit_Export.h
   STATIC_DEFINE edit_BUILT_AS_STATIC
 )
+
 add_executable(edit_test libedit_test.c)
 target_link_libraries(edit_test edit)
 add_executable(edit_test_dll libedit_test_dll.c)
-install (TARGETS edit edit_test edit_test_dll
-  DESTINATION "${CMAKE_SOURCE_DIR}/bin${LIB_SUFFIX}")
-install (TARGETS edit_static
-  DESTINATION "${CMAKE_SOURCE_DIR}/lib${LIB_SUFFIX}")
-install (FILES editline/readline.h
-  DESTINATION "${CMAKE_SOURCE_DIR}/include/editline")
-string(TOUPPER "${CMAKE_BUILD_TYPE}" uppercase_CMAKE_BUILD_TYPE)
-if (MSVC AND uppercase_CMAKE_BUILD_TYPE MATCHES "DEBUG")
-  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/Debug/edit_static.pdb
-    DESTINATION "${CMAKE_SOURCE_DIR}/lib${LIB_SUFFIX}")
-  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/Debug/edit.pdb
-    DESTINATION "${CMAKE_SOURCE_DIR}/bin${LIB_SUFFIX}")
-endif()
+target_link_libraries(edit_test_dll edit)
+# install (TARGETS edit edit_test edit_test_dll
+#   DESTINATION "${CMAKE_INSTALL_PREFIX}/bin${LIB_SUFFIX}")
+install (TARGETS edit_static edit edit_test edit_test_dll
+  LIBRARY DESTINATION lib${LIB_SUFFIX}
+  ARCHIVE DESTINATION lib${LIB_SUFFIX}
+  RUNTIME DESTINATION bin${LIB_SUFFIX}
+  PUBLIC_HEADER DESTINATION include
+)
+
+install(
+  FILES
+    $<TARGET_PDB_FILE:edit> 
+    $<TARGET_PDB_FILE:edit_test>
+    $<TARGET_PDB_FILE:edit_test_dll>
+  DESTINATION bin${LIB_SUFFIX}
+  OPTIONAL)
+
